--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 3px;
   height: 3px;
 }
@@ -15,4 +15,4 @@
 
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
-}
+} */
